--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
+    "md5": "^2.3.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.13.0",
+    "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
