--- a/env/dev.env
+++ b/env/dev.env
@@ -7,6 +7,7 @@ SESSION_SECRET=jeeva
 HASH_SALTROUNDS=10
 
 DB_HOST=srv1087.hstgr.io
-DB_USER=u367880334_hostelappuser
-DB_PASSWORD=*bibE:Wy5E
-DB_NAME=u367880334_hostelapp
+DB_USER=u367880334_tsheetuser
+DB_PASSWORD=dB$tp@p!HY96
+DB_NAME=u367880334_timesheet
+
