--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ioredis": "^5.6.1",
     "knex": "^3.1.0",
     "md5": "^2.3.0",
+    "mime-types": "^3.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0",
