Fix sharp install for linux-x64

--- a/env/dev.env
+++ b/env/dev.env
@@ -1,4 +1,4 @@
-APP_PORT=1000
+APP_PORT=3306
 
 IMAGE_WIDTH=200
 IMAGE_HEIGHT=200
@@ -6,8 +6,8 @@ IMAGE_HEIGHT=200
 SESSION_SECRET=jeeva
 HASH_SALTROUNDS=10
 
-DB_HOST=srv1087.hstgr.io
-DB_USER=u367880334_tsheetuser
-DB_PASSWORD=dB$tp@p!HY96
-DB_NAME=u367880334_timesheet
+DB_HOST=mysql.railway.internal
+DB_USER=root
+DB_PASSWORD=oAIVqOCIuJylUAytZNlywYplaJrJAiub
+DB_NAME=railway
 
